# learnCMake

./: .gitignore  CMakeLists.txt  COPYRIGHT  readme.md
src/: CMakeLists.txt  main.cpp
