CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

PROJECT(HELLO)

SET(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR}/install)

MESSAGE(STATUS "This is the BINARY dir: " ${HELLO_BINARY_DIR})
MESSAGE(STATUS "This is the SOURCE dir: " ${HELLO_SOURCE_DIR})
MESSAGE(STATUS "CMAKE_INSTALL_PREFIX: " ${CMAKE_INSTALL_PREFIX})

ADD_SUBDIRECTORY(src)

# $ make install
INSTALL(FILES COPYRIGHT readme.md DESTINATION share/files)
INSTALL(PROGRAMS run.sh DESTINATION bin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc)


